jitfailure-dolfin_expression_b1608188bed82fa47c2574d7dfa46deb/error.log
/tmp/tmpvp9ox09d/dolfin_expression_b1608188bed82fa47c2574d7dfa46deb.cpp: In member function ‘virtual void dolfin::dolfin_expression_b1608188bed82fa47c2574d7dfa46deb::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpvp9ox09d/dolfin_expression_b1608188bed82fa47c2574d7dfa46deb.cpp:67:182: error: ‘c’ was not declared in this scope
           values[0] = (rhoMax-((rhoMax-rhoMin) /                                          (1 + exp(Inclination*(-t+t0)))                                          +rhoMin) + rhoMin)*c + rho_water*(1-c);
                                                                                                                                                                                      ^
/tmp/tmpvp9ox09d/dolfin_expression_b1608188bed82fa47c2574d7dfa46deb.cpp: In member function ‘virtual double dolfin::dolfin_expression_b1608188bed82fa47c2574d7dfa46deb::get_property(std::__cxx11::string) const’:
/tmp/tmpvp9ox09d/dolfin_expression_b1608188bed82fa47c2574d7dfa46deb.cpp:79:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "rhoMax") return rhoMax;          if (name == "rhoMin") return rhoMin;          if (name == "Inclination") return Inclination;          if (name == "t") return t;          if (name == "t0") return t0;          if (name == "rho_water") return rho_water;
           ^~
/tmp/tmpvp9ox09d/dolfin_expression_b1608188bed82fa47c2574d7dfa46deb.cpp:79:57: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "rhoMax") return rhoMax;          if (name == "rhoMin") return rhoMin;          if (name == "Inclination") return Inclination;          if (name == "t") return t;          if (name == "t0") return t0;          if (name == "rho_water") return rho_water;
                                                         ^~
